<resources>
    <string name="app_name">Music Player</string>
    <string name="shuffle">Shuffle</string>
    <string name="playlist">Playlist</string>
    <string name="favourites">Favourites</string>
    <string name="music_world">Music World.</string>
    <string name="song_name">Song Name.</string>
    <string name="back_button">back button</string>
    <string name="header_text">header text</string>
    <string name="song_start_time">00:00</string>
    <string name="song_end_time">Loading..</string>
    <string name="repear">Repeat</string>
    <string name="equalizer">Equalizer</string>
    <string name="timer">Timer</string>
    <string name="share">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">icon</string>
    <string name="nav_text">Welcome to \nWorld of music.</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_album">Song Album.</string>
</resources>