<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="2dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".PlayerActivity">


    <!--    layout for header of player screen-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <!--        back button-->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:padding="5dp"
            android:src="@drawable/back_icon" />

        <!--        text of header-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/header_text"
            android:gravity="center"
            android:text="@string/music_world"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="NestedWeights" />

        <!--        favourite button-->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/favourites"
            android:src="@drawable/favorite_empty_icon" />
    </LinearLayout>

    <!--    song image-->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgSongImagePlayerActivity"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:src="@drawable/demo"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/custom_blue"
        app:strokeWidth="5dp" />

    <!--    diaplaying the song name-->
    <TextView
        android:id="@+id/txtSongNamePlayerActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/song_name"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <!--    layout for play pause,back and next button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <!--        back button-->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnPreviourPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/previous_icon"
            app:iconSize="40dp" />

        <!--        play & pause button-->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnPlayAndPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@android:color/holo_red_light"
            app:icon="@drawable/pause_icon"
            app:iconSize="50dp"
            app:iconTint="@android:color/white"
            app:shapeAppearanceOverlay="@style/curved" />

        <!--        next button-->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnNextPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/next_icon"
            app:iconSize="40dp" />

    </LinearLayout>

    <!--    layout for seekbar, and song time-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_margin="25dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!--        song start time-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/song_start_time"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <!--        seek bar-->
        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <!--        song end time-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/song_end_time"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>


    <!--    layout for repeat,equalizer,timer and share button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!--        repeat button-->
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/repear"
            android:src="@drawable/repeat_icon"
            app:tint="@color/custom_pink"
            tools:ignore="NestedWeights" />

        <!--        equalizer button-->
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/equalizer"
            android:src="@drawable/equalizer_icon"
            app:tint="@color/custom_pink" />

        <!--        timer button-->
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/timer"
            android:src="@drawable/timer_icon"
            app:tint="@color/custom_pink" />

        <!--        share button-->
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share"
            android:src="@drawable/share_icon"
            app:tint="@color/custom_pink" />

    </LinearLayout>


</LinearLayout>