<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--        for buttons-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/shuffle"
                android:drawableTop="@drawable/shuffle_icon"
                android:text="@string/shuffle"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/favourites"
                android:drawableTop="@drawable/favorite_icon"
                android:text="@string/favourites"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/playlist"
                android:drawableTop="@drawable/playlist_icon"
                android:text="@string/playlist"
                android:textAllCaps="false"
                android:textColor="@color/black" />

        </LinearLayout>

<!--        for total songs count-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Total songs:"
            android:textColor="@color/black"
            android:layout_margin="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>